# Linkedin-Profile-Parser

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  job_matching.db  main.py  pyproject.toml  requirements.txt
data/: job_matching.db
src/ai_componenet/: exception.py  get_llm.py
src/ai_componenet/core/: prompts.py
src/ai_componenet/database/: crud.py  database.py  models.py  utils.py
src/ai_componenet/graph/: graph.py  nodes.py  proj_graph.py  state.py
src/ai_componenet/graph/utils/: jdinfo.py  models.py  tools.py
